HAWQ-839. Fix libyarn coredump when failover to standby RM